...
        displayTabs
    }

    private lazy var segmentedControl: UISegmentedControl = {
        let control = UISegmentedControl(items: [])
        control.addTarget(self, action: #selector(handleSegmentSelectionChanged(_:)), for: .valueChanged)
        control.accessibilityIdentifier = "WI.Regular.TabSwitcher"
        return control
    }()

    init(model: WISessionController, tabs: [WITab], renderCache: WIUIKitTabRenderCache) {
        self.model = model
        displayTabs = tabs
...
